updated relative path

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -8,11 +8,11 @@ z{% extends '.layout.njk' %}
     items: [
       {
         text: "Home",
-        href: "/"
+        href: "./"
       },
       {
         text: "Check if you can apply for a Farming Transformation Fund water grant",
-        href: "/"
+        href: "./"
       }
     ]
   }) }}
