--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -52,7 +52,7 @@
           },
           {
             text: "View cookies",
-            href: "/site-cookies"
+            href: "./site-cookies"
           }
         ]
       },{
