--- a/app/templates/cookies/cookie-policy.njk
+++ b/app/templates/cookies/cookie-policy.njk
@@ -116,7 +116,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">Change your cookie settings</h2>
-      <form action="/site-cookies" method="post" novalidate>
+      <form action="./site-cookies" method="post" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(analytics) }}
         {{ govukButton({
