--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -20,7 +20,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/country" autocomplete="off" novalidate>
+      <form method="POST" action="./country" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
