--- a/app/templates/next-steps.njk
+++ b/app/templates/next-steps.njk
@@ -46,7 +46,7 @@
         You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</div>
         {{ govukButton({
           text: "Continue",
-          href: "/business-details"
+          href: "./business-details"
         }) }}
     </div>
   </div>
