--- a/app/templates/tenancy-length-condition.njk
+++ b/app/templates/tenancy-length-condition.njk
@@ -19,7 +19,7 @@
       </p>
       {{ govukButton({
           text: "Continue",
-          href: "/project-items"
+          href: "./project-items"
         }) }}
     </div>
   </div>
