--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -16,7 +16,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/tenancy" autocomplete="off" novalidate>
+      <form method="POST" action="./tenancy" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
