--- a/app/templates/business.njk
+++ b/app/templates/business.njk
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ heading }}</h1>
-      <form method="POST" action="/business" autocomplete="off"  novalidate>
+      <form method="POST" action="./business" autocomplete="off"  novalidate>
         {{ crumbToken(crumb)}}
         {{ govukInput(nameInput) }}
         {{ govukButton({
