--- a/app/templates/home.njk
+++ b/app/templates/home.njk
@@ -10,11 +10,11 @@
     items: [
       {
         text: "Home",
-        href: "/"
+        href: "./"
       },
       {
         text: "Check if you can apply for a Farming Transformation Fund water grant",
-        href: "/"
+        href: "./"
       }
     ]
   }) }}
