--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -22,7 +22,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/irrigation-water-source" autocomplete="off" novalidate="novalidate">
+      <form method="POST" action="./irrigation-water-source" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(waterSourceCurrent) }}
         {{ govukCheckboxes(waterSourcePlanned) }}
