--- a/app/templates/not-found.njk
+++ b/app/templates/not-found.njk
@@ -8,11 +8,11 @@
     items: [
       {
         text: "Home",
-        href: "/"
+        href: "./"
       },
       {
         text: "Check if you can apply for a Farming Transformation Fund water grant",
-        href: "/"
+        href: "./"
       }
     ]
   }) }}
