--- a/app/templates/productivity.njk
+++ b/app/templates/productivity.njk
@@ -28,7 +28,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/productivity" autocomplete="off" novalidate="novalidate">
+      <form method="POST" action="./productivity" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(checkboxes) }}
         {{ govukButton({
