--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -49,7 +49,7 @@
     </thead>
     <tbody class="govuk-table__body">
 
-    {% for question in scoreData.desirability.questions %}
+    {% for question in questions %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">
         {{question.pageTitle}}
