--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -1,38 +1,38 @@
 {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
 {% from "../components/macro.njk" import crumbToken %}
 <noscript>
-{{ govukCookieBanner({
-  ariaLabel: "Cookies on Farming Transformation Fund water grant",
+  {{ govukCookieBanner({
+  ariaLabel: "Cookies on Farming Transformation Fund",
   messages: [
     {
-      headingText: "Cookies on Farming Transformation Fund water grant",
+      headingText: "Cookies on Farming Transformation Fund",
       text: "We use cookies to make this service work and collect analytics information. To accept or reject cookies, turn on JavaScript in your browser settings or reload this page."
     }
   ]
 }) }}
 </noscript>
-
 <div class="js-cookies-container" style="display:none">
-  <input type="hidden" name="crumbBanner" id="crumbBanner" value="{{crumb}}"  autocomplete="off" />
+  <input type="hidden" name="crumbBanner" id="crumbBanner" value="{{ crumb }}" autocomplete="off"/>
   {% set html %}
-    <p>We use some essential cookies to make this service work.</p>
-    <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+  <p>We use some essential cookies to make this service work.</p>
+  <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
   {% endset %}
-
   {% set acceptHtml %}
-    <p>You’ve accepted analytics cookies. You can <a href="/site-cookies">change your cookie settings</a> at any time.</p>
+  <p>You’ve accepted analytics cookies. You can
+    <a href="/site-cookies">change your cookie settings</a>
+    at any time.</p>
   {% endset %}
-
   {% set rejectHtml %}
-    <p>You’ve rejected analytics cookies. You can <a href="/site-cookies">change your cookie settings</a> at any time.</p>
+  <p>You’ve rejected analytics cookies. You can
+    <a href="/site-cookies">change your cookie settings</a>
+    at any time.</p>
   {% endset %}
-
   {{ govukCookieBanner({
-    ariaLabel: "Cookies on Farming Transformation Fund water grant",
+    ariaLabel: "Cookies on Farming Transformation Fund",
     classes: "js-cookies-banner",
     messages: [
       {
-        headingText: "Cookies on Farming Transformation Fund water grant",
+        headingText: "Cookies on Farming Transformation Fund",
         html: html,
         classes: "js-question-banner",
         actions: [
