--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -16,9 +16,9 @@
 
 {% block header %}
   {{ govukHeader({
-    homepageUrl: "/",
+    homepageUrl: "./start",
     serviceName: "Check if you can apply for a Farming Transformation Fund water grant",
-    serviceUrl: "/"
+    serviceUrl: "./start"
   }) }}
   <div class="govuk-grid-row govuk-width-container">
     {{ govukPhaseBanner({
@@ -45,13 +45,13 @@
   html: '<h2 class="govuk-visually-hidden">Support links</h2>
           <ul class="govuk-footer__inline-list">
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="/accessibility">
+              <a class="govuk-footer__link" href="./accessibility">
                 Accessibility
               </a>
             </li>
-            
+
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="/site-cookies">
+              <a class="govuk-footer__link" href="./site-cookies">
                 Cookies
               </a>
             </li>
