open links in new page [accessibility, cookies]

--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -52,7 +52,8 @@
           },
           {
             text: "View cookies",
-            href: "./site-cookies"
+            href: "./site-cookies",
+            attributes: {target: "_blank"}
           }
         ]
       },{
