/739 -> switch url from /site-cookies to /cookies

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -51,7 +51,7 @@
             </li>
 
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="./site-cookies" target="_blank" rel="noopener noreferrer">
+              <a class="govuk-footer__link" href="./cookies" target="_blank" rel="noopener noreferrer">
                 Cookies
               </a>
             </li>
