--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -19,12 +19,12 @@
   {% endset %}
   {% set acceptHtml %}
   <p>You’ve accepted analytics cookies. You can
-    <a href="/site-cookies">change your cookie settings</a>
+    <a href="/cookies">change your cookie settings</a>
     at any time.</p>
   {% endset %}
   {% set rejectHtml %}
   <p>You’ve rejected analytics cookies. You can
-    <a href="/site-cookies">change your cookie settings</a>
+    <a href="/cookies">change your cookie settings</a>
     at any time.</p>
   {% endset %}
   {{ govukCookieBanner({
@@ -52,7 +52,7 @@
           },
           {
             text: "View cookies",
-            href: "./site-cookies",
+            href: "./cookies",
             attributes: {target: "_blank"}
           }
         ]
