--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -1,12 +1,13 @@
-{% extends ".layout.njk" %}
+{% extends '.layout.njk' %}
+
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% block pageTitle %}
   Accessibility statement - GOV.UK
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1)"
+    text: "Home",
+    href: "./"
   }) }}
 {% endblock %}
 {% block content %}
@@ -34,12 +35,12 @@
       </p>
       <ul class="govuk-list govuk-list--bullet">
         <li>email:
-          <a href="mailto:#">#</a>
+          <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a>
         </li>
         <li>call
-          <a href="tel:#">#</a>
+          <a href="tel:03000 200 301">03000 200 301</a>
           (Monday to Friday, 8:30am to 5pm find out about call charges at
-          <a href="www.gov.uk/call-charges">www.gov.uk/call-charges</a>)</li>
+          <a href="http://www.gov.uk/call-charges">www.gov.uk/call-charges</a>)</li>
         <li>write to [Address]</li>
       </ul>
       <h2 class="govuk-heading-m">Enforcement procedure</h2>
