Text changes for cookie page

--- a/app/templates/cookies/cookie-policy.njk
+++ b/app/templates/cookies/cookie-policy.njk
@@ -24,9 +24,9 @@
 
 <h2 class="govuk-heading-l">Cookies on Farming Transformation Fund</h2>
 
-<p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
+<p class="govuk-body">Cookies are files saved on your phone, tablet or computer when you visit a website.</p>
 
-<p class="govuk-body">We use cookies to make this site work and collect information about how you use our service.</p>
+<p class="govuk-body">We use cookies to store information about how you use the GOV.UK website, such as the pages you visit.</p>
 
 <h3 class="govuk-heading-m">Cookie settings</h3>
 
