--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -15,7 +15,7 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Business details</h1>
       <form method="POST" action="./business-details" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}<br/>
