--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -2,7 +2,9 @@
 
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Confirmation 
+{% endblock %}
 {% block content %}
   {{ govukPanel(output) }}
 <div class="govuk-width-container">
