--- a/app/templates/service-unavailable.njk
+++ b/app/templates/service-unavailable.njk
@@ -1,7 +1,9 @@
 {% extends '.layout.njk' %}
 
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Service unavailable 
+{% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
