--- a/app/templates/400.njk
+++ b/app/templates/400.njk
@@ -1,5 +1,7 @@
 {% extends '.layout.njk' %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Bad request 
+{% endblock %}
 {% block content %}
   <div class="govuk-width-container">
     <div class="govuk-main-wrapper--auto-spacing">
