--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -4,6 +4,9 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 12 of 19  
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
@@ -13,6 +16,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 12 of 19  </span>
       <form method="POST" action="./SSSI" autocomplete="off" novalidate>
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
