--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -4,7 +4,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Confirm 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
