--- a/app/templates/contact-details.njk
+++ b/app/templates/contact-details.njk
@@ -4,6 +4,9 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "./components/macro.njk" import crumbToken %}
+{% block pageTitle %}
+  GOV.UK - Defra grants - {{ heading }}
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
