--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -4,6 +4,10 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "./components/macro.njk" import crumbToken %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 1 of 19  
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -15,9 +19,21 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 1 of 19  </span>
       <form method="POST" action="./farming-type" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
+        {{ govukDetails({
+            summaryText: "Eligibility",
+            html:
+            '<p>This grant is for:</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>arable and horticultural farming businesses supplying the food industry</li>
+                <li>nurseries growing flowers</li>
+                <li>forestry nurseries</li>
+            </ul>'
+           })
+        }}
         {{ govukButton({
           text: "Continue"
         }) }}
