--- a/app/templates/grant.njk
+++ b/app/templates/grant.njk
@@ -8,6 +8,9 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 8 of 19  
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -19,6 +22,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 8 of 19  </span>
       <form method="POST" action="./grant" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
