--- a/app/templates/home.njk
+++ b/app/templates/home.njk
@@ -4,7 +4,9 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Start
+{% endblock %}
 {% block beforeContent %}
   {{ govukBreadcrumbs({
     items: [
