--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -5,6 +5,9 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 17 of 19  
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -22,6 +25,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 17 of 19  </span>
       <form method="POST" action="./irrigation-systems" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(irrigationCurrent) }}
