--- a/app/templates/login.njk
+++ b/app/templates/login.njk
@@ -4,7 +4,9 @@
 {% from "govuk/components/error-message/macro.njk" import govukErrorMessage %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Login
+{% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-body">
