--- a/app/templates/next-steps.njk
+++ b/app/templates/next-steps.njk
@@ -3,7 +3,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Next Steps 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
