--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -5,8 +5,9 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
-
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 10 of 19  
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
@@ -17,6 +18,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 10 of 19  </span>
       <form method="POST" action="./planning-permission" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
