--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -7,7 +7,9 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 7 of 19  
+{% endblock %}7
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -19,6 +21,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 7 of 19  </span>
       <form method="POST" action="./project-cost" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukInput(inputProjectCost) }}
