--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -5,6 +5,9 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
+{% block pageTitle %}
+  GOV.UK - Defra grants - Question 9 of 19  
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -16,6 +19,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-xl">Question 9 of 19  </span>
       <form method="POST" action="./remaining-costs" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
