--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -3,8 +3,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "./components/macro.njk" import crumbToken %}
-
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Your project's score 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
