--- a/app/templates/tenancy-length.njk
+++ b/app/templates/tenancy-length.njk
@@ -5,7 +5,9 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  GOV.UK - Defra grants - Tenancy agreement 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
