Page Title & Google Analytics

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -17,7 +17,7 @@
 {% block header %}
   {{ govukHeader({
     homepageUrl: "./start",
-    serviceName: "Check if you can apply for a Farming Transformation Fund water grant",
+    serviceName: "Check if you can apply for a Farming Transformation Fund water management grant",
     serviceUrl: "./start"
   }) }}
   <div class="govuk-grid-row govuk-width-container">
