--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 12 of 19  
+  GOV.UK - Defra grants - SSSI
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -16,7 +16,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 12 of 19  </span>
       <form method="POST" action="./SSSI" autocomplete="off" novalidate>
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
