--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 16 of 19  
+  GOV.UK - Defra grants - Irrigation water
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -24,7 +24,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 16 of 19  </span>
       <form method="POST" action="./irrigation-water-source" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(waterSourceCurrent) }}
