--- a/app/templates/login.njk
+++ b/app/templates/login.njk
@@ -10,7 +10,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-body">
-      <h1 class="govuk-heading-l">Check if you can apply for a Farming Transformation Fund water grant</h1>
+      <h1 class="govuk-heading-l">Check if you can apply for a Farming Transformation Fund water management grant</h1>
 
       {% if errorMessage %}
         {{ govukErrorMessage({
