--- a/app/templates/next-steps.njk
+++ b/app/templates/next-steps.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Next Steps 
+  GOV.UK - Defra grants - Next steps 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
