--- a/app/templates/not-found.njk
+++ b/app/templates/not-found.njk
@@ -13,7 +13,7 @@
         href: "./"
       },
       {
-        text: "Check if you can apply for a Farming Transformation Fund water grant",
+        text: "Check if you can apply for a Farming Transformation Fund water management grant",
         href: "./"
       }
     ]
