--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 6 of 19  
+  GOV.UK - Defra grants - Project items
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 6 of 19  </span>
     <h1 class="govuk-heading-l">Which eligible items does your project need?</h1>
     <span id="project-items-hint" class="govuk-hint">
       The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £1 million.
