--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 9 of 19  
+  GOV.UK - Defra grants - Remaining costs
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 9 of 19  </span>
       <form method="POST" action="./remaining-costs" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
