--- a/app/templates/tenancy-length-condition.njk
+++ b/app/templates/tenancy-length-condition.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - You may be able to apply for a grant  
+  GOV.UK - Defra grants - Tenancy agreement  
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
