--- a/app/templates/tenancy-length.njk
+++ b/app/templates/tenancy-length.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Tenancy agreement 
+  GOV.UK - Defra grants - Tenancy length 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
