--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -69,4 +69,12 @@
     </div>
   </div>
 
+{% if googleTagManagerKey %}
+
+<!-- Google Tag Manager -->
+<script>
+dataLayer.push({dimension3:'GDPR accepted'});
+</script>
+<!-- End Google Tag Manager -->
+{% endif %}
 {% endblock %}
