--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Confirmation - {{output.confirmationId}} 
+  GOV.UK - Defra grants - Reference 
 {% endblock %}
 {% block content %}
   {{ govukPanel(output) }}
@@ -41,4 +41,21 @@
     </div>
   </div>
   <p class="govuk-body"><a href={{ output.surveyLink }} target="_blank" rel="noopener noreferrer">What do you think of this service?</a></p>
+
+{% if googleTagManagerKey %}
+
+<!-- Google Tag Manager -->
+<script>
+dataLayer.push(
+    {
+      pageCategory: 'Journey',
+      event: 'journey-confirmation',
+      time: Date.now(),
+      correlationId:"{{output.confirmationId}}",
+      metric3:Date.now(),
+      dimension2: "{{output.confirmationId}}"
+    });
+</script>
+<!-- End Google Tag Manager -->
+{% endif %}
 {% endblock %}
