--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 2 of 19  
+  GOV.UK - Defra grants - Legal status  
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 2 of 19  </span>
       <form method="POST" action="./legal-status" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
