--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -20,4 +20,19 @@
       </p>
     </div>
   </div>
+  
+{% if googleTagManagerKey %}
+
+<!-- Google Tag Manager -->
+<script>
+dataLayer.push(
+    {
+      pageCategory: 'Journey',
+      event: 'journey-eliminated',
+      dimension4:'Not-Eligible',
+      metric2: Date.now()
+    });
+</script>
+<!-- End Google Tag Manager -->
+{% endif %}
 {% endblock %}
