--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 10 of 19  
+  GOV.UK - Defra grants - Planning permission
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -18,7 +18,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 10 of 19  </span>
       <form method="POST" action="./planning-permission" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
