--- a/app/templates/project-details.njk
+++ b/app/templates/project-details.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Question 13 of 19  
+  GOV.UK - Defra grants - Project details
 {% endblock %}
 
 {% block beforeContent %}
@@ -25,7 +25,6 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Question 13 of 19  </span>
       <h1 class="govuk-heading-l">Project details</h1>
       <form method="POST" action="./project-details" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
