update accessibility statement

--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -7,6 +7,88 @@
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">Accessibility statement</h1>
       <p class="govuk-body">
+        Accessibility statement for Check if you can apply for a Farming Transformation Fund water grant service
+      </p>
+      <p class="govuk-body">
+        This accessibility statement applies to the service Check if you can apply for a Farming Transformation Fund water grant.
+      </p>
+      <p class="govuk-body">
+        This service is run by the Rural Payments Agency (RPA). We want as many people as possible to be able to use this website. For example, that means you should be able to:
+        <ul class="govuk-list govuk-list--bullet">
+          <li>change colours, contrast levels and fonts </li>
+          <li> change colours, contrast levels and fonts </li>
+          <li> zoom in up to 300% without the text spilling off the screen </li>
+          <li> navigate most of the service using just a keyboard </li>
+          <li> navigate most of the service using speech recognition software </li>
+          <li> listen to most of the service using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver) </li>
+        </ul> 
+      </p>
+      <p class="govuk-body"> We’ve also made the service text as simple as possible to understand.
+      </p>
+      <p class="govuk-body"> 
+        <a href="https://mcmw.abilitynet.org.uk/">
+          AbilityNet </a> has advice on making your device easier to use if you have a disability.
+      </p>
+      <h2 class="govuk-heading-m">How accessible this service is</h2>
+      <h2 class="govuk-heading-m">We know some parts of this website are not fully accessible:</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Pressing Enter when the focus is on a checkbox on some screens might take the user to the next screen instead of selecting the checkbox
+        <li>Title mentioned by the screen reader software is inconsistent with the name of the service
+        <li>Autofill functionality offered by browsers is not  accurately mapped to some fields
+        <li>Screen reader software does not accurately mention the full title of the page and does not accurately interpret the table in scoring summary page
+        <li>The user is not alerted to application timeout limits
+      </ul>
+      <h2 class="govuk-heading-m">Feedback and contact information</h2>
+      <p class="govuk-body">If you need information in this service in a different format like accessible PDF, large print, easy read, audio recording or braille:
+      </p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
+        <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
+      </ul>
+      <p class="govuk-body">We’ll consider your request and get back to you in 10 days.</p>
+      <p class="govuk-body">Reporting accessibility problems with this service</p>
+      <p class="govuk-body">We’re always looking to improve the accessibility of this service. If you find any problems not listed on this page or think we’re not meeting accessibility requirements:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></li>
+        <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
+      </ul>
+      <h2 class="govuk-heading-m">Enforcement procedure</h2>
+      <p class="govuk-body">
+        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a href="https://www.equalityadvisoryservice.com/">contact the Equality Advisory and Support Service (EASS).</a>
+        </p>
+
+      <h2 class="govuk-heading-l">Contacting us by phone or visiting us in person<h2>
+      <p class="govuk-body">
+        We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.<br/> <br/>
+        Our offices have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.<br/>
+        To contact us:
+      </p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
+        <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
+      </ul>
+
+      <h2 class="govuk-heading-l">Technical information about this service’s accessibility</h2>
+      <p class="govuk-body">
+        RPA is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
+      </p>
+      <h2 class="govuk-heading-m">Compliance status </h2>
+      <p class="govuk-body">
+        This service is partially compliant with the Web <a href="https://www.w3.org/TR/WCAG21">Content Accessibility Guidelines version 2.1 </a>AA standard, due to the non-compliances listed.<br/><br/>
+        We intend to fix these problems by as soon as possible.
+      </p>
+      <h2 class="govuk-heading-l">Preparation of this accessibility statement </h2>
+      <p class="govuk-body">
+        This statement was prepared on 28 May 2021. It was last reviewed on 28 May 2021.<br/><br/>
+        This service was last tested on 19 May 2021. The test was carried out by Defra’s Digital, Data and Technology Services accessibility team.
+      </p>
+
+ 
+
+ 
+
+
+      {# <p class="govuk-body">
         This service is run by Defra. We want as many people as possible to be able to use this website. 
         For example, that means you should be able to:
       </p>
@@ -48,7 +130,7 @@
       </p>
       <p class="govuk-body">
         This website was last tested on #
-      </p>
+      </p> #}
     </div>
   </div>
 {% endblock %}
